# Indexer_in_Rust

./: .dockerignore  .env.example  Cargo.toml  docker-compose.yml  run.sh
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: alerts.rs  mod.rs  tokens.rs  wallets.rs
libs/indexer-db/: Cargo.toml
libs/indexer-db/migrations/: 20251127000001_create_tokens.sql  20251127000002_create_swaps.sql  20251127000003_create_lp_locks.sql  20251127000004_create_price_snapshots.sql  20251127000005_create_wallet_activity.sql  20251127000006_create_token_holders.sql  20251127000007_create_alert_events.sql  20251127000008_create_pairs.sql  20251202000001_create_wallets.sql  20251202000002_seed_data.sql
libs/indexer-db/src/: lib.rs
libs/indexer-db/src/entity/: alert.rs  evm_chains.rs  lp_lock.rs  mod.rs  pair.rs  price_snapshot.rs  swap.rs  token.rs  token_holder.rs  wallet.rs  wallet_activity.rs
listener/src/: error.rs  main.rs  service.rs
processor/: Cargo.toml
processor/artifacts/abi/: bep20.json  mudra_locker.json  pancakeswap_v2_factory.json  pancakeswap_v2_pair.json  pinksale_locker.json  unicrypt_locker.json
processor/src/: error.rs  main.rs  redis_client.rs  service.rs
processor/src/events/: mod.rs  pair_created.rs  swap.rs  transfer.rs
processor/src/handlers/: lp_lock.rs  mod.rs  pair_created.rs  swap.rs  sync.rs  transfer.rs
processor/src/scoring/: bee_score.rs  mod.rs
